2004-06-11  Rajesh Vaidheeswarran <rv!@noSpam_LosEthIs@dsmit.com>

	* (p4-version): Bump to 10.7
	* Documentation fixes.
	* (p4-get-server-version): Fix regexp to be less picky

2004-06-11  Rajesh Vaidheeswarran <rv!@noSpam_LosEthIs@dsmit.com>

	* (p4-version): Bump to 10.6
	* (p4-follow-link-name): Add check for cygwin
	* (p4-cygpath): New function to do cygwin path mangling

2004-06-11  Rajesh Vaidheeswarran <rv!@noSpam_LosEthIs@dsmit.com>

	* (p4-version): Bump to 10.5
	* (p4-group, p4-groups): New defuns. Appropriate adds to existing
	defuns to incorporate the new features
	* (p4-make-face): Use the simpler facep and lose distro-specific issues
	* miscellaneous doc fixes

2004-05-18  Rajesh Vaidheeswarran  <rv!@noSpam_LosEthIs@dsmit.com>

	* (p4-version): Bump to 10.4
	* Update all email addresses in this list with some bogus string
	to prevent auto-reaping of email addresses from this file

2004-05-18  David Lum <david.lum!@noSpam_LosEthIs@amdocs.com>

	* (p4-make-face): Add new defun to make a face only if it doesn't
	already exist.

2003-09-12  Rajesh Vaidheeswarran  <rv!@noSpam_LosEthIs@dsmit.com>

	* (p4-version): Bump version to 10.3
	* p4.el.html: Document `p4-ediff2', `p4-depot-find-file' and
	`p4-bug-report'
	* thanks.html: Add P T Withington for p4-ediff2 related changes
	* TODO: Remove note about documenting `p4-depot-find-file'

2003-09-12  P T Withington <ptw!@noSpam_LosEthIs@pobox.com>

	* (p4-ediff2): New. Two ediff any two versions a file. Add to menu map
	* (p4-ediff): Use `p4-ediff2' if called with prefix-arg

2003-07-06  Daniel Brotsky  <dev!@noSpam_LosEthIs@brotsky.com>

	Work around a problem in some emacsen wherein the PWD environment
	variable is not updated on a per-buffer basis, thus confusing p4
	which prefers the PWD value to the actual directory of invocation.
	The result would be that p4 config files (P4CONFIG) would be found
	by emacs but not respected by p4.  The workaround is always to use